# FFmpegSdlPractice

./: .gitignore  CMakeLists.txt  README.md
3rdLib/Libffmpeg/include/libavcodec/: avcodec.h
3rdLib/Libffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  swscale.lib
av_to_file/: .gitignore  CMakeLists.txt  README.md  main.cpp
av_to_file/Libffmpeg/include/libavformat/: avformat.h
av_to_sdl/: CMakeLists.txt  README.md
av_to_sdl/Libffmpeg/lib/: avformat.lib  avutil.lib  postproc.lib
ffmeg_sdl_audio/: CMakeLists.txt  README.md  main.cpp
ffmeg_sdl_audio/Libffmpeg/include/libavutil/: ffversion.h
ffmeg_sdl_audio/Libffmpeg/lib/: swresample.lib
ffmeg_sdl_video/: CMakeLists.txt  README.md  build.bat  main.cpp
ffmpeg_sdl_audio/: CMakeLists.txt  main.cpp
ffmpeg_sdl_video/: CMakeLists.txt  main.cpp
